# avatar_behavior_cloning

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  README.md  WORKSPACE  ali_real_conda_env.yml  default.bazelrc  eric_notes.md  eric_setup.sh  hw_install_script.sh  requirements.in  requirements.txt  setup_ros2_workspace.sh  train.sh
.github/workflows/: main.yml
configs/network/: Wired connection 1.nmconnection  Wired connection 2.nmconnection  Wired connection 4.nmconnection  Wired connection 5.nmconnection  Wired connection 6.nmconnection  internet.nmconnection
controllers/: BUILD.bazel  impedance_controller_avatar_hand.py  spatialstiffness_controller_avatar_arm.py
data/: .gitattributes  BUILD.bazel
data/avatar/env_objects/: container.sdf  cube.sdf  cylinder.sdf  table_top.sdf
data/avatar/meshes/: .gitattributes
data/avatar/urdf/: avatar_base.urdf  avatar_gripper_3f.urdf  avatar_gripper_left_nomimic.urdf  avatar_gripper_right.urdf  avatar_gripper_right_nomimic.urdf  avatar_left_arm.urdf  avatar_left_arm_new.urdf  avatar_right_arm.urdf  avatar_right_arm_new.urdf  panda_arm.urdf  panda_arm_avatar.urdf  vis.py
data/avatar/urdf/archive/: avatar_dual_arm.urdf  avatar_gripper_left.urdf  avatar_gripper_right.urdf  panda_arm_avatar.urdf
drivers/: libfranka-0.9.2-x86_64.deb
envs/: BUILD.bazel  avatar_drake_env.py  controller_ros_passthrough.py  panda_arm.urdf  simplified_simulation.py
eval/: .gitattributes  eval_policy.py  load_model_play.py
hardware/test_trajs/: 2024-01-27-19-08-13.bag
hardware/test_trajs/rosbag2_2024_01_18-13_27_59/: metadata.yaml  rosbag2_2024_01_18-13_27_59_0.db3
nodes/: BUILD.bazel  README.md  ros_teleop_data_receiver_py.py  test_ros_node.py
nodes/tests/: test_ros_teleop_data_receiver_py.py
ros_utils/: .gitattributes  README.md  condense_hd5.py  demonstration_plotter.py  diffusion_rollout_ros_sub.py  diffusion_ros_interface.py  generate_zarr_episodes.py  get_obs_tester.py  helpers.py  log.txt  obs_subscriber_node.py  quick_test.py  rollout_plotter.py  ros_sync_time.py  ros_time_sync.py  rosbags_to_torch.py  structured_data.h5  sync_multi_bag.sh  sync_runner.py  test_hd.py  test_pkl.py  throttle_ros_nodes_rdda.py  time_sync_ros_nodes.py  to_torch.sh  zarr_development.ipynb
ros_utils/.ipynb_checkpoints/: zarr_development-checkpoint.ipynb
ros_utils/cameras/: 99-logitech-cams.rules.bak  multi_cam_launch.launch  realsenselaunch.sh
ros_utils/cameras/configs/: camera_rviz.rviz  config_left.yml  config_right.yml  config_table.yml
ros_utils/structured_data.zarr/: .zattrs
ros_utils/structured_data.zarr/actions/: .zarray  0
ros_utils/structured_data.zarr/haptics/: .zarray  0
ros_utils/structured_data.zarr/images/: .zarray  0.0.0.0  0.0.0.1  0.0.1.0  0.0.1.1  0.1.0.0  0.1.0.1  0.1.1.0  0.1.1.1  1.0.0.0  1.0.0.1  1.0.1.0  1.0.1.1  1.1.0.0  1.1.0.1  1.1.1.0  1.1.1.1  2.0.0.0  2.0.0.1  2.0.1.0  2.0.1.1  2.1.0.0  2.1.0.1  2.1.1.0  2.1.1.1
ros_utils/sync/: sync_runner.py  time_sync_ros_nodes.py
scripts/: debug.py  download_data.sh  launch_teleop  minimize_data.py  startup_robot.py  startup_robot.sh  startup_teleop.py  startup_teleop.sh
simulate/: BUILD.bazel  README.md  avatar_dual_arm_py.py  avatar_simple_py.py
test/test_cpp/: BUILD.bazel  test_cc.cpp
test/test_py/: BUILD.bazel  test_drake_ros_py.py  test_imports_py.py  test_ros_teleop_data_receiver_py.py  test_torch_py.py
tools/workspace/: default.bzl
tools/workspace/diffusion_policy/: package.BUILD.bazel  repository.bzl
tools/workspace/footpedal/: README.md  repository.bzl  udev_footpedal.sh
tools/workspace/pytorch/: repository.bzl
toy/teleop/: BUILD.bazel  punito.py
training/: create_data_dummy.py  save_zarr.py  train.py  vision_dataset.py  vision_dataset_py.py
training/diffusion_policy/: ali_requirements.in  ali_requirements.txt  eval_real_robot.py  mul_train.sh  ray_train_multirun.py  requirements.txt
training/diffusion_policy/diffusion_policy/common/: normalize_util.py  replay_buffer.py  sampler.py
training/diffusion_policy/diffusion_policy/config/: RAL_READY_train_haptic_image_policy_aware.yaml  RAL_READY_train_haptic_image_teacher_aware.yaml  eric_overfit.yaml  punyo_style_train_haptic_image_teacher_aware.yaml  train_haptic_image_teacher_aware.yaml  train_haptic_image_teacher_only_pos_aware.yaml  train_robomimic_image_workspace.yaml
training/diffusion_policy/diffusion_policy/config/task/: haptic_image_teacher_aware.yaml
training/diffusion_policy/diffusion_policy/dataset/: haptics_dataset.py  real_pusht_image_dataset.py  test_haptics_dataset.py  test_test.py  test_zarr.py
training/diffusion_policy/diffusion_policy/model/vision/: multi_image_obs_encoder.py
training/diffusion_policy/diffusion_policy/real_world/: real_data_conversion.py
training/diffusion_policy/diffusion_policy/workspace/: train_diffusion_unet_image_workspace.py
training/utils/test.zarr/data/actions/: .zarray  0.0
training/utils/test.zarr/data/haptics/: .zarray  0.0
training/utils/test.zarr/data/images/: .zarray  0.0.0.0.0  0.0.1.0.0  0.1.0.0.0  0.1.1.0.0  0.2.1.0.0  1.0.0.0.0  1.1.0.0.0  1.2.1.0.0  10.1.0.0.0  10.2.0.0.0  11.0.0.0.0  16.1.0.0.0  17.0.0.0.0  2.0.0.0.0  2.1.0.0.0  2.2.0.0.0  20.1.1.0.0  21.1.1.0.0  27.2.0.0.0  3.0.1.0.0  3.1.0.0.0  3.1.1.0.0  3.2.0.0.0  30.1.1.0.0  31.1.0.0.0  32.2.0.0.0  33.1.1.0.0  34.0.1.0.0  34.1.0.0.0  35.0.0.0.0  37.0.1.0.0  37.1.0.0.0  39.1.1.0.0  39.2.0.0.0  4.0.0.0.0  4.0.1.0.0  4.2.0.0.0  43.1.0.0.0  43.2.0.0.0  (+54 more)
utils/: BUILD.bazel  drake_utils.py  geometry_utils.py  teleop_utils.py
