load("@pip//:requirements.bzl", "requirement")

py_library(
  name = "module_py",
  srcs = ["__init__.py"],
)

py_library(
  name = "spatialstiffness_controller_avatar_arm",
  srcs = ["spatialstiffness_controller_avatar_arm.py"],
  deps = [    
    requirement("numpy"),
    requirement("matplotlib"),
    "@drake//bindings/pydrake:pydrake",
    "//utils:all_utils"
    ],
  visibility = ["//visibility:public"],
)

py_library(
  name = "impedance_controller_avatar_hand",
  srcs = ["impedance_controller_avatar_hand.py"],
  deps = [   
    ":spatialstiffness_controller_avatar_arm", 
    requirement("numpy"),
    requirement("matplotlib"),
    "@drake//bindings/pydrake:pydrake",
    "//utils:all_utils"
    ],
  visibility = ["//visibility:public"],
)

# Rolling up the controllers py_library

py_library(
    name = "controllers",
    srcs = glob(["*.py"]),
    deps = [   
      requirement("numpy"),
      requirement("matplotlib"),
      "@drake//bindings/pydrake:pydrake",
      "//utils:all_utils"
      ],
    visibility = ["//visibility:public"],
  )