load("@drake//tools/install:install.bzl", "install")
load("@drake//tools/skylark:drake_data.bzl", "models_filegroup")

filegroup(
    name = "avatar_models",
    data = glob(["avatar/**"]),
    visibility = ["//visibility:public"],
)

install(
    name = "avatar_models_install",
    data = [":avatar_models"],
    visibility = ["//visibility:public"],
)
