load("@rules_python//python:defs.bzl", "py_binary")
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
    "drake_py_test",
)

load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "module_py",
    srcs = ["__init__.py"],
    deps = ["//:module_py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "avatar_simple_py",
    srcs = ["avatar_simple_py.py"],
    data = ["//data:avatar_models"],
    deps = [
    requirement("numpy"),
    requirement("pydot"),
    requirement("argparse"),
    "@drake//bindings/pydrake:pydrake",
    "//utils:all_utils",
    "//utils:geometry_utils",
    "//controllers:impedance_controller_avatar_hand",
    "//controllers:spatialstiffness_controller_avatar_arm",
    ],
    visibility = ["//visibility:public"],
)
