load("@rules_python//python:defs.bzl", "py_binary")
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
    "drake_py_test",
)
load("@ros2//:ros_py.bzl", "ros_py_binary", "ros_py_test")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "module_py",
    srcs = ["__init__.py"],
    deps = ["//:module_py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "avatar_simple_py",
    srcs = ["avatar_simple_py.py"],
    data = ["//data:avatar_models"],
    deps = [
    "@ros2//:rclpy_py",
    "@ros2//:std_msgs_py",
    "@ros2//:geometry_msgs_py",
    "@ros2//:sensor_msgs_py",
    requirement("numpy"),
    requirement("pydot"),
    requirement("argparse"),
    requirement("matplotlib"),
    requirement("scipy"),
    "@drake//bindings/pydrake:pydrake",
    "//nodes:ros_teleop_data_receiver_py",
    "//utils:all_utils",
    "//utils:geometry_utils",
    "//controllers:impedance_controller_avatar_hand",
    "//controllers:spatialstiffness_controller_avatar_arm",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "avatar_dual_arm_py",
    srcs = ["avatar_dual_arm_py.py"],
    data = ["//data:avatar_models"],
    deps = [
    "@ros2//:rclpy_py",
    "@ros2//:std_msgs_py",
    "@ros2//:geometry_msgs_py",
    "@ros2//:sensor_msgs_py",
    requirement("numpy"),
    requirement("pydot"),
    requirement("cairosvg"),
    requirement("argparse"),
    requirement("matplotlib"),
    requirement("scipy"),
    requirement("graphviz"),
    "@drake//bindings/pydrake:pydrake",
    "//nodes:ros_teleop_data_receiver_py",
    "//utils:all_utils",
    "//utils:geometry_utils",
    "//controllers:impedance_controller_avatar_hand",
    "//controllers:spatialstiffness_controller_avatar_arm",
    "//envs:avatar_drake_env",
    ],
    visibility = ["//visibility:public"],
)
