
load("@pip//:requirements.bzl", "requirement")
package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
    "drake_py_unittest",
)

py_library(
    name = "module_py",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
)

py_library(
  name = "geometry_utils",
  srcs = glob(["*.py"]),
  deps = [
    ":module_py",
    "//simulate:module_py",
    requirement("numpy"),
    requirement("matplotlib"),
    requirement("transforms3d"),
    "@pytorch",
    "@drake//bindings/pydrake:pydrake",],
  visibility = ["//visibility:public"],
)

# rollup of the whole library 
py_library(
  name = "all_utils",
  deps = [
    ":geometry_utils",
  ],
  visibility = ["//visibility:public"],
)
